# sort-conduit

./: .gitignore  .project  sort-conduit.cabal
src/Data/Conduit/: Sort.hs
test/: Test.hs
