name:           sort-conduit
version:        0.0
cabal-version:  >= 1.2
build-type:     Simple
author:         Shohei Murayama
maintainer:     shohei.murayama@gmail.com
category:       Data, Conduit

library
  hs-source-dirs:   src
  build-depends:    base >= 4
                  , bytestring
                  , cereal >= 0.3
                  , conduit >= 0.5.2.3
                  , directory >= 1.1
                  , heap >= 1.0
                  , mtl >= 2.1
                  , primitive >= 0.4
                  , vector >= 0.9
                  , vector-algorithms >= 0.5
  ghc-options:      -Wall
  exposed-modules:  Data.Conduit.Sort

test-suite test
  type:            exitcode-stdio-1.0
  build-depends:   base >= 4
                 , HUnit
                 , hspec > 1.3
                 , hspec-expectations
                 , QuickCheck >= 2.4
                 , random
  ghc-options:     -Wall -rtsopts
  hs-source-dirs:  src, test
  main-is:         Test.hs