name:           sort-conduit
version:        0.0
cabal-version:  >= 1.10
build-type:     Simple
author:         Shohei Murayama
maintainer:     shohei.murayama@gmail.com
category:       Data, Conduit

library
  build-depends:      base >= 4
                    , bytestring >= 0.9
                    , cereal >= 0.3
                    , conduit >= 0.5
                    , directory >= 1.1
                    , heap >= 1.0
                    , mtl >= 2.1
                    , primitive >= 0.4
                    , vector >= 0.9
                    , vector-algorithms >= 0.5
  default-language:   Haskell2010
  exposed-modules:    Data.Conduit.Sort
  ghc-options:        -Wall
  hs-source-dirs:     src

test-suite test
  type:               exitcode-stdio-1.0
  build-depends:      base >= 4
                    , bytestring >= 0.9
                    , cereal >= 0.3
                    , conduit >= 0.5
                    , HUnit
                    , hspec > 1.3
                    , hspec-expectations
                    , QuickCheck >= 2.4
                    , random
                    , safecopy >= 0.8
                    , sort-conduit
  default-language:   Haskell2010
  ghc-options:        -Wall -rtsopts
  hs-source-dirs:     test
  main-is:            Test.hs
